# jm-kata

./: README.md  pyproject.toml  pytest.ini  requirements.txt
TextGeneration/: generate.py  train.py
TextGeneration/tests/: __init__.py  conftest.py  test_error_handling.py  test_model.py  test_pipeline.py
TextGeneration/utils/: language_model.py  logger.py
TextGeneration/utils/tests/: __init__.py  conftest.py  test_files.py  test_preprocessor.py  test_schemas.py
